data/derived/comb/progs/unify/prog8672.ml.out
Characters 34-41:
  let _ = stringOfList (fun x -> x) ["foo"];;
                                    ^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'b -> 'c
